2001-01-18  David Billinghurst <David.Billinghurst@riotinto.com>

	* gcc.misc-tests/i386-prefetch.exp: Save and restore
	torture_with_loops and torture_without_loops

2002-01-17  Jakub Jelinek  <jakub@redhat.com>

	* gcc.c-torture/compile/20020116-1.c: New test.

2002-01-16  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/20020116-2.c: New test.

	* gcc.dg/ultrasp4.c: New test.

	* gcc.dg/20020116-1.c: New test.

2002-01-15  Geoffrey Keating  <geoffk@redhat.com>

	* gcc.dg/20020103-1.c: Also test for __PPC__, since that's used
	by EABI.

2002-01-15  Janis Johnson  <janis187@us.ibm.com>

	* gcc.misc-tests/i386-prefetch.exp: New.
	* gcc.misc-tests/i386-pf-3dnow-1.c: New test.
	* gcc.misc-tests/i386-pf-athlon-1.c: New test.
	* gcc.misc-tests/i386-pf-none-1.c: New test.
	* gcc.misc-tests/i386-pf-sse-1.c: New test.

2002-01-15  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/gnu89-init-1.c: Add new tests.

2002-01-15  Andreas Jaeger  <aj@suse.de>

	* gcc.dg/i386-mmx-1.c: Also run on x86-64.
	* gcc.dg/i386-mmx-2.c: Likewise.
	* gcc.dg/i386-sse-1.c: Likewise.
	* gcc.dg/i386-sse-2.c: Likewise.
	* gcc.dg/i386-sse-3.c: Likewise.

2001-01-14  David Billinghurst <David.Billinghurst@riotinto.com>

        * g77.f-torture/execute/intrinsic-unix-bessel.f:
        Uncomment additional cases that now pass.

2002-01-11  Richard Henderson  <rth@redhat.com>

	* gcc.dg/i386-mmx-1.c, gcc.dg/i386-mmx-2.c: New.
	* gcc.dg/i386-sse-1.c, gcc.dg/i386-sse-2.c, gcc.dg/i386-sse-1.c: New.

Fri Jan 11 12:13:30 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* objc.dg/special/unclaimed-category-1.m: Include objc/objc-api.h.

2002-01-10  Aldy Hernandez  <aldyh@redhat.com>

        * gcc.dg/altivec-4.c: Add tests for lvebx, lvehx, lvewx, lvxl,
        lvx, stvx, stvebx, stvehx, stvewx, stvxl.

2002-01-10  Dale Johannesen  <dalej@apple.com>

	* gcc.c-torture/execute/loop-11.c: New.

2002-01-08  Aldy Hernandez  <aldyh@redhat.com>

        * gcc.dg/altivec-4.c: Add test for mtvscr, dssall, mfvscr,