@@ -1,6 +1,7 @@
 /* Test __attribute__ ((deprecated)) */
 /* { dg-do compile } */
 /* { dg-options "-Wdeprecated-declarations -fmessage-length=0" } */
+/* { dg-bogus "At global scope" "" { xfail *-*-* } 0 } */
 
 #if 1
 typedef int INT1 __attribute__((deprecated));
@@ -53,9 +54,9 @@ int func1()
    int (*pf)() = f1;			/* { dg-warning "`f1' is deprecated" "" } */
 
    z = w + x + y + g1 + g2 + g3;	/* { dg-warning "`x' is deprecated" "" } */
-   					/* { dg-warning "`y' is deprecated" "" { target *-*-* } 55 } */
-   					/* { dg-warning "`g2' is deprecated" "" { target *-*-* } 55 } */
-   					/* { dg-warning "`g3' is deprecated" "" { target *-*-* } 55 } */
+   					/* { dg-warning "`y' is deprecated" "" { target *-*-* } 56 } */
+   					/* { dg-warning "`g2' is deprecated" "" { target *-*-* } 56 } */
+   					/* { dg-warning "`g3' is deprecated" "" { target *-*-* } 56 } */
    return f1(); 			/* { dg-warning "`f1' is deprecated" "" } */
 }
 
@@ -71,7 +72,7 @@ int func2(S1 *p)
   p->u1.field5 = g1 + p->field7;
   p->u2.field9;				/* { dg-warning "`u2' is deprecated" "" } */
   return p->u1.field6 + p->field8;	/* { dg-warning "`field6' is deprecated" "" } */
-  					/* { dg-warning "`field8' is deprecated" "" { target *-*-* } 73 } */
+  					/* { dg-warning "`field8' is deprecated" "" { target *-*-* } 74 } */
 }
 
 struct SS1 {
